--- a/app/src/main/res/drawable/primary_color_linear_gradient.xml
+++ b/app/src/main/res/drawable/primary_color_linear_gradient.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
 
     <gradient
-        android:angle="225"
-        android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimary"
+        android:angle="90"
+        android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorPrimary"
         android:type="linear" />
 
 </shape>
