--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,6 @@
         android:focusableInTouchMode="true">
 
         <LinearLayout
-            android:id="@+id/onlineContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -36,11 +35,11 @@
 
             </FrameLayout>
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
+                android:id="@+id/onlineContainer"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
-                app:cardCornerRadius="0dp">
+                android:layout_weight="2">
 
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/viewPager"
@@ -57,29 +56,28 @@
                     app:piv_animationType="swap"
                     app:piv_dynamicCount="true"
                     app:piv_interactiveAnimation="true"
-                    app:piv_selectedColor="#673ab7"
-                    app:piv_unselectedColor="#b388ff"
+                    app:piv_selectedColor="#FAFAFA"
+                    app:piv_unselectedColor="#E0E0E0"
                     app:piv_viewPager="@id/viewPager"
                     app:piv_padding="12dp"
                     app:piv_radius="6dp"/>
 
-            </androidx.cardview.widget.CardView>
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/offlineContainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:padding="16dp"
+                android:text="@string/no_network_connection_error"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="20sp"
+                android:fontFamily="@string/roboto_medium"
+                android:visibility="gone"/>
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/offlineContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:drawableTop="@drawable/ic_cloud_off_black_96dp"
-            android:drawablePadding="16dp"
-            android:drawableTint="@color/colorAccent"
-            android:text="@string/no_network_connection_error"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:fontFamily="@string/roboto_medium"
-            android:visibility="gone"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
