--- a/app/src/main/res/layout/fragment_customer_form.xml
+++ b/app/src/main/res/layout/fragment_customer_form.xml
@@ -7,12 +7,17 @@
         android:layout_height="wrap_content"
         android:fillViewport="true">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
         <LinearLayout
             android:id="@+id/formContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/view_space">
+            android:padding="16dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/usernameContainer"
@@ -29,7 +34,10 @@
                     android:layout_height="wrap_content"
                     android:autofillHints="@null"
                     android:hint="@string/customerNumber"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:drawableStart="@drawable/ic_person_black_24dp"
+                    android:drawablePadding="16dp"
+                    android:drawableTint="@color/colorAccent"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -51,7 +59,10 @@
                     android:layout_height="wrap_content"
                     android:autofillHints="@null"
                     android:hint="@string/customerPassword"
-                    android:inputType="textPassword|textNoSuggestions" />
+                    android:inputType="textPassword|textNoSuggestions"
+                    android:drawableStart="@drawable/ic_lock_black_24dp"
+                    android:drawablePadding="16dp"
+                    android:drawableTint="@color/colorAccent"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,6 +98,8 @@
                 android:text="@string/login" />
 
         </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </androidx.core.widget.NestedScrollView>
 </layout>
