--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,12 @@
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/strawberries_min"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,11 +32,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableTop="@mipmap/ic_launcher_cow_round"
-                    android:drawablePadding="16dp"
                     android:layout_gravity="center"
                     android:text="@string/app_name"
-                    android:textSize="28sp"
+                    android:textSize="30sp"
+                    android:textColor="@android:color/white"
                     android:fontFamily="@string/roboto_medium"/>
 
             </FrameLayout>
