--- a/app/src/main/res/layout/item_changed_menu.xml
+++ b/app/src/main/res/layout/item_changed_menu.xml
@@ -4,7 +4,7 @@
 
     <data>
         <variable
-            name="menu"
+            name="item"
             type="de.wackernagel.essbar.ui.pojos.ChangedMenu"/>
     </data>
 
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
             android:layout_marginEnd="56dp"
-            android:text="@{menu.name}"
+            android:text="@{item.name}"
             style="@style/ListItemTitle"
             tools:text="Obstfrühstück"/>
 
@@ -30,7 +30,7 @@
             android:src="@drawable/ic_add_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{menu.nowOrdered}"/>
+            android:visibility="@{item.nowOrdered}"/>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
             android:src="@drawable/ic_remove_shopping_cart_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{!menu.nowOrdered}"/>
+            android:visibility="@{!item.nowOrdered}"/>
 
     </FrameLayout>
 </layout>
