--- a/app/src/main/res/layout/item_calendar_week.xml
+++ b/app/src/main/res/layout/item_calendar_week.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="obj"
+            name="item"
             type="de.wackernagel.essbar.ui.pojos.CalendarWeek"/>
     </data>
 
@@ -13,7 +13,7 @@
         android:background="@drawable/checkable_selector"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:edit="@{obj.selected}">
+        app:edit="@{item.selected}">
 
         <TextView
             android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@{obj.number}"
+            android:text="@{item.number}"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:fontFamily="@string/roboto_medium"
@@ -35,7 +35,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="72dp"
             android:layout_marginEnd="56dp"
-            android:text="@{obj.dateRange}"
+            android:text="@{item.dateRange}"
             tools:text="07.05 - 13.05"
             style="@style/ListItemTitle"/>
 
@@ -48,7 +48,7 @@
             android:src="@drawable/ic_check_black_24dp"
             android:tint="@color/colorAccent"
             android:contentDescription="@null"
-            android:visibility="@{obj.selected}"/>
+            android:visibility="@{item.selected}"/>
 
     </de.wackernagel.essbar.utils.CheckableFrameLayout>
 </layout>
