--- a/app/src/main/res/layout/item_customer.xml
+++ b/app/src/main/res/layout/item_customer.xml
@@ -1,45 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:foreground="?attr/selectableItemBackground">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/avatarImageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/shape_circle"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="centerInside"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_person_black_24dp"/>
+    <data>
+        <variable
+            name="item"
+            type="de.wackernagel.essbar.room.Customer"/>
+    </data>
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginEnd="16dp"
-        android:textSize="16sp"
-        android:textColor="@color/textColorPrimary"
-        android:fontFamily="@string/roboto_regular"
-        tools:text="Bob Doe"/>
+        android:layout_height="72dp"
+        android:foreground="?attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/numerTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginEnd="16dp"
-        android:textSize="14sp"
-        android:textColor="@color/textSecondary"
-        android:fontFamily="@string/roboto_regular"
-        tools:text="270145"/>
+        <ImageView
+            android:id="@+id/avatarImageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/shape_circle"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:scaleType="centerInside"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_person_black_24dp" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="16sp"
+            android:textColor="@color/textColorPrimary"
+            android:fontFamily="@string/roboto_regular"
+            android:text="@{item.name}"
+            tools:text="Bob Doe" />
+
+        <TextView
+            android:id="@+id/numerTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="14sp"
+            android:textColor="@color/textSecondary"
+            android:fontFamily="@string/roboto_regular"
+            android:text="@{item.number}"
+            tools:text="270145" />
+
+    </FrameLayout>
+</layout>
