--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,13 +12,6 @@
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:contentDescription="@null"
-            android:src="@drawable/strawberries_min"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,14 +23,24 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
+                <com.flaviofaria.kenburnsview.KenBurnsView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/bowl_blur_min"/>
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/scrim"
+                    android:gravity="center"
                     android:text="@string/app_name"
-                    android:textSize="30sp"
+                    android:textSize="40sp"
                     android:textColor="@android:color/white"
-                    android:fontFamily="@string/roboto_medium"/>
+                    android:fontFamily="@string/roboto_medium"
+                    android:shadowColor="#7F000000"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="2"/>
 
             </FrameLayout>
 
@@ -45,7 +48,8 @@
                 android:id="@+id/onlineContainer"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2">
+                android:layout_weight="2"
+                android:visibility="gone">
 
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/viewPager"
@@ -62,8 +66,8 @@
                     app:piv_animationType="swap"
                     app:piv_dynamicCount="true"
                     app:piv_interactiveAnimation="true"
-                    app:piv_selectedColor="#FAFAFA"
-                    app:piv_unselectedColor="#E0E0E0"
+                    app:piv_selectedColor="@color/colorPrimary"
+                    app:piv_unselectedColor="@color/colorPrimaryDark"
                     app:piv_viewPager="@id/viewPager"
                     app:piv_padding="12dp"
                     app:piv_radius="6dp"/>
@@ -82,6 +86,21 @@
                 android:textSize="20sp"
                 android:fontFamily="@string/roboto_medium"
                 android:visibility="gone"/>
+
+            <FrameLayout
+                android:id="@+id/loadingContainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2">
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
+            </FrameLayout>
+
+
 
         </LinearLayout>
 
