--- a/app/src/main/res/layout/fragment_customer_form.xml
+++ b/app/src/main/res/layout/fragment_customer_form.xml
@@ -8,101 +8,100 @@
         android:layout_height="wrap_content"
         android:fillViewport="true">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
-        <LinearLayout
-            android:id="@+id/formContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/usernameContainer"
+            <LinearLayout
+                android:id="@+id/formContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/ErrorTextAppearance"
-                app:hintEnabled="false"
-                app:hintTextAppearance="@style/HintTextAppearance">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/usernameField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints="@null"
-                    android:hint="@string/customerNumber"
-                    android:inputType="number"
-                    android:drawableStart="@drawable/ic_person_black_24dp"
-                    android:drawablePadding="16dp"
-                    android:drawableTint="@color/colorAccent"
-                    tools:ignore="UnusedAttribute"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/passwordContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/view_space"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/ErrorTextAppearance"
-                app:hintEnabled="false"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/colorAccent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passwordField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints="@null"
-                    android:hint="@string/customerPassword"
-                    android:inputType="textPassword|textNoSuggestions"
-                    android:drawableStart="@drawable/ic_lock_black_24dp"
-                    android:drawablePadding="16dp"
-                    android:drawableTint="@color/colorAccent"
-                    tools:ignore="UnusedAttribute"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/view_space">
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/list_item_section_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/section_height"
+                    android:gravity="center_vertical"
+                    android:text="@string/login_section"
+                    style="@style/ListItemSection"/>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/usernameContainer"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/save_credentials"
-                    android:layout_toStartOf="@id/saveCredentials"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerInParent="true"/>
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/ErrorTextAppearance"
+                    app:hintEnabled="false"
+                    app:hintTextAppearance="@style/HintTextAppearance">
 
-                <CheckBox
-                    android:id="@+id/saveCredentials"
-                    android:layout_width="wrap_content"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/usernameField"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="@null"
+                        android:drawableTint="@color/colorAccent"
+                        android:hint="@string/customerNumber"
+                        android:inputType="number"
+                        tools:ignore="UnusedAttribute" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/passwordContainer"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"/>
+                    android:layout_marginTop="8dp"
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/ErrorTextAppearance"
+                    app:hintEnabled="false"
+                    app:hintTextAppearance="@style/HintTextAppearance"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/colorAccent">
 
-            </RelativeLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/passwordField"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="@null"
+                        android:drawableTint="@color/colorAccent"
+                        android:hint="@string/customerPassword"
+                        android:inputType="textPassword|textNoSuggestions"
+                        tools:ignore="UnusedAttribute" />
 
-            <Button
-                android:id="@+id/loginButton"
-                style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/view_space"
-                android:text="@string/login" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/saveCredentialsContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp">
 
-        </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerInParent="true"
+                        android:layout_toStartOf="@id/saveCredentials"
+                        android:text="@string/save_credentials" />
+
+                    <CheckBox
+                        android:id="@+id/saveCredentials"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginStart="16dp" />
+
+                </RelativeLayout>
+
+                <Button
+                    android:id="@+id/loginButton"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/view_space"
+                    android:text="@string/login" />
+
+            </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 </layout>
