--- a/app/src/main/res/layout/item_customer.xml
+++ b/app/src/main/res/layout/item_customer.xml
@@ -6,6 +6,9 @@
         <variable
             name="item"
             type="de.wackernagel.essbar.room.Customer"/>
+        <variable
+            name="viewModel"
+            type="de.wackernagel.essbar.ui.viewModels.LoginViewModel"/>
     </data>
 
     <FrameLayout
@@ -32,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginStart="72dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="56dp"
             android:textSize="16sp"
             android:textColor="@color/textColorPrimary"
             android:fontFamily="@string/roboto_regular"
@@ -45,12 +48,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:layout_marginStart="72dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="56dp"
             android:textSize="14sp"
             android:textColor="@color/textSecondary"
             android:fontFamily="@string/roboto_regular"
             android:text="@{item.number}"
             tools:text="270145" />
+
+        <ImageButton
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_delete_black_24dp"
+            android:tint="@color/icon"
+            android:contentDescription="@null"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="0dp"
+            android:onClick="@{(view) -> viewModel.deleteCustomer( item )}"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
 
     </FrameLayout>
 </layout>
